--- a/index.html
+++ b/index.html
@@ -174,12 +174,22 @@
       />
     </h1>
     <h1 class="header">♣️ Basics - Blackjack ♠️</h1>
-    <p class="header"><h1>Objective: Each participant attempts to beat the dealer by getting a count as close to 21 as possible, without going over 21.
-      Click "hit" to take another card, and "stand" to end your turn.
-    </h1>
-    </p>
 
-    <div id="score-board"><span style="color:black"><h2>Scoreboard</h2></span></h2>
+    
+
+    <div id="container">
+      <!-- <p>Input:</p>
+      <input id="input-field" />
+      <br />
+      <button id="submit-button">Submit</button> -->
+      <!-- <p>Output:</p> -->
+      <!-- <div id="output-div"></div> -->
+      <div id="instructions"><h3>Objective:</h3>Each participant attempts to beat the dealer by getting a count as close to 21 as possible, without going over 21. <br>
+      Click "hit" to take another card, and "stand" to end your turn. <br>
+      Click "restart" to reset the scoreboard.
+      </div>
+
+      <div id="score-board"><span style="color:black"><h2>Scoreboard</h2></span></h2>
         <table class="tb">
           <thead>
             <tr>
@@ -198,21 +208,14 @@
         </table>
       </div>
 
-    <div id="container">
-      <!-- <p>Input:</p>
-      <input id="input-field" />
-      <br />
-      <button id="submit-button">Submit</button> -->
-      <!-- <p>Output:</p> -->
-      <!-- <div id="output-div"></div> -->
-      
-
       <div id="output-div"><h2>Select 'Deal' to play</h2></div>
 
+      <div id="buttons">
       <button id="start-button">Deal</button>
       <button id="hit-button">Hit</button>
       <button id="stand-button">Stand</button>
       <button id="restart-button">Restart</button>
+      </div>
 
     </div>
 
